# RepoAgents

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  QUICKSTART.ko.md  QUICKSTART.md  README.ko.md  README.md  SECURITY.md  TODO.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.yml  docs-task.yml  implementation-task.yml
.github/workflows/: ci.yml
docs/: README.ko.md  README.md  architecture.ko.md  architecture.md  extensions.ko.md  extensions.md  live-github-ops.ko.md  live-github-ops.md  live-github-sandbox-rollout.ko.md  live-github-sandbox-rollout.md  release.ko.md  release.md  role-packs.ko.md  role-packs.md  runbook.ko.md  runbook.md  sync.ko.md  sync.md
docs/backlog/: active-queue.md  issue-queue.md
examples/docs-maintainer-pack/: QUICKSTART.md  README.md  issues.json
examples/docs-maintainer-pack/pack/: AGENTS.append.md
examples/live-github-ops/: README.md
examples/live-github-ops/ops/: build-handoff.sh  github-smoke.fixture.json  handoff-order.md  preflight.md  render-dashboard.sh  repoagents.env.example  republic.env.example  run-loop.sh
examples/live-github-sandbox-rollout/: .gitignore  README.md  issues.json  parser.py
examples/live-github-sandbox-rollout/ops/: execution-order.md  github-smoke.baseline.json  github-smoke.comments-ready.json  github-smoke.pr-gated.json  github-smoke.pr-ready.json  preflight.md  rollout-order.md  (+5 more)
examples/local-file-inbox/: README.md  issues.json
examples/local-file-sync/: README.md  issues.json  parser.py
examples/local-markdown-inbox/: README.md
examples/local-markdown-sync/: README.md
examples/python-lib/: README.md  issues.json
examples/qa-role-pack/: README.md  issues.json
examples/release-publish-dry-run/: README.md
examples/release-rehearsal/: README.md
examples/web-app/: README.md  issues.json
examples/webhook-receiver/: README.md  issues.json
examples/webhook-signature-receiver/: README.md  issues.json
scripts/: demo_codex.sh  demo_docs_maintainer_pack.sh  demo_live_ops.sh  demo_live_publish_sandbox.sh  demo_local_file_sync.sh  demo_local_file_tracker.sh  demo_local_markdown_sync.sh  demo_local_markdown_tracker.sh  demo_python_lib.sh  demo_qa_role_pack.sh  demo_release_publish_dry_run.sh  demo_release_rehearsal.sh  demo_web_app.sh  demo_webhook_receiver.sh  demo_webhook_signature_receiver.sh  release_preflight.sh  webhook_receiver.py
src/repoagents/: __init__.py  __main__.py  cleanup_report.py  dashboard.py  dashboard_tui.py  github_auth.py  github_health.py  operator_reports.py  ops_brief.py  ops_bundle.py  ops_status.py  release_announcement.py  release_assets.py  release_checklist.py  release_preview.py  report_policy.py  sync_artifacts.py  sync_audit.py  sync_health.py  sync_manifest_reports.py
src/reporepublic/: __init__.py  __main__.py  cleanup_report.py  dashboard.py  github_health.py  operator_reports.py  ops_brief.py  ops_bundle.py  ops_status.py  release_announcement.py  release_assets.py  release_checklist.py  release_preview.py  report_policy.py  sync_artifacts.py  sync_audit.py  sync_health.py  sync_manifest_reports.py
tests/: conftest.py  test_cleanup_report.py  test_cli.py  test_codex_backend.py  test_config.py  test_dashboard.py  test_dashboard_tui.py  test_demo_scripts.py  test_duplicates.py  test_fake_codex.py  test_git_utils.py  test_github_auth.py  test_github_health.py  test_mock_backend.py  test_ops_brief.py  test_ops_bundle.py  test_ops_status.py  test_orchestrator.py  test_policies.py  test_prompts.py  test_publication.py  test_related_report_details.py  test_release_announcement.py  test_release_assets.py  test_release_checklist.py  test_release_preview.py  test_repo_context.py  test_report_policy.py  test_review_criteria.py  test_review_signals.py  test_roles.py  test_scaffold_snapshots.py  test_state.py  test_sync_artifacts.py  test_sync_audit.py  test_sync_health.py  test_sync_manifest_reports.py  test_tracker.py  test_webhook_receiver_script.py  test_webhooks.py  (+1 more)
(+156 files in other folders)
