[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "reporepublic"
version = "0.1.0"
description = "Install an AI maintainer team into any repo."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "RepoRepublic Maintainers" }
]
dependencies = [
  "httpx>=0.28.1",
  "jinja2>=3.1.6",
  "pydantic>=2.11.1",
  "pyyaml>=6.0.2",
  "typer>=0.16.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
]

[dependency-groups]
dev = [
  "pytest>=8.3.5",
]

[project.scripts]
republic = "reporepublic.cli.app:main"

[tool.hatch.build]
include = [
  "src/reporepublic/**/*.py",
  "src/reporepublic/templates/**/*",
]

[tool.hatch.build.targets.wheel]
packages = ["src/reporepublic"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
