[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "repoagents"
version = "0.1.1"
description = "Install an AI maintainer team into any repo."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "RepoAgents Maintainers" }
]
keywords = ["ai", "codex", "github", "orchestrator", "automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
  "httpx>=0.28.1",
  "jinja2>=3.1.6",
  "pydantic>=2.11.1",
  "pyyaml>=6.0.2",
  "typer>=0.16.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
]

[project.urls]
Homepage = "https://github.com/lhy0718/RepoAgents"
Repository = "https://github.com/lhy0718/RepoAgents"
Documentation = "https://github.com/lhy0718/RepoAgents/tree/main/docs"
Issues = "https://github.com/lhy0718/RepoAgents/issues"

[dependency-groups]
dev = [
  "pytest>=8.3.5",
]

[project.scripts]
repoagents = "repoagents.cli.app:main"

[tool.hatch.build]
include = [
  "src/repoagents/**/*.py",
  "src/repoagents/templates/**/*",
]

[tool.hatch.build.targets.wheel]
packages = ["src/repoagents"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
